미션3 기본 요구사항 구현 완료

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>판다마켓</title>
-  <link rel="stylesheet" href="reset.css" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles/reset.css" />
+  <link rel="stylesheet" href="/styles/home.css" />
   <link rel="stylesheet" as="style" crossorigin
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
-  <link rel="ico" href="/favicon.ico" />
+  <link rel="ico" href="/img/icons/favicon.ico" />
 </head>
 
-<body>
+<body id="body">
   <header id="gnb">
     <div class="content">
       <div class="logo">
         <a href="./">
-          <img src="/img/panda-market-logo.png" />
+          <img src="/img/logo/panda-market-logo.png" />
         </a>
       </div>
       <div class="loginButn">
-        <a href="./login">로그인</a>
+        <a href="/login.html">로그인</a>
       </div>
     </div>
   </header>
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="imgBox">
-          <img src="/img/hero-image.png" />
+          <img src="/img/home/hero-image.png" />
         </div>
       </div>
     </section>
@@ -47,7 +47,7 @@
     <section class="whiteColorSection">
       <div class="content2">
         <div class="imgBox">
-          <img src="/img/feature1-image.png" />
+          <img src="/img/home/feature1-image.png" />
         </div>
         <div class="textBox">
           <div class="hotItem">
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="imgBox">
-          <img src="/img/feature2-image.png" />
+          <img src="/img/home/feature2-image.png" />
         </div>
       </div>
     </section>
@@ -94,7 +94,7 @@
     <section class="whiteColorSection">
       <div class="content4">
         <div class="imgBox">
-          <img src="/img/feature3-image.png" />
+          <img src="/img/home/feature3-image.png" />
         </div>
         <div class="textBox">
           <div class="register">
@@ -123,7 +123,7 @@
           <div class="text1">판다마켓 중고 거래</div>
         </div>
         <div class="imgBox">
-          <img src="/img/bottom-banner-image.png" />
+          <img src="/img/home/bottom-banner-image.png" />
         </div>
       </div>
     </div>
@@ -145,7 +145,7 @@
         </a>
 
         <a href="https://www.youtube.com/">
-          <img src="/img/social/youtube-logo.svg">
+          <img src="/img/social/youtube-logo.svg">  
         </a>
 
         <a
@@ -155,7 +155,7 @@
       </div>
     </div>
   </footer>
-  <script src="index.js"></script>
+  <script src="/scripts/home.js"></script>
 </body>
 
 </html>
