--- a/signup.html
+++ b/signup.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../reset.css" />
+  <link rel="stylesheet" href="/styles/reset.css" />
   <link rel="stylesheet" type="text/css"
     href='https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles/signup.css" />
   <title>판다마켓 로그인</title>
 </head>
 
-<body>
+<body id="body">
   <div class="content">
     <div class="imgbox">
       <a href="../index.html">
-        <img src="/img/panda-market-logo.png" alt="판다마켓 로고" />
+        <img src="/img/logo/panda-market-logo.png" alt="판다마켓 로고" />
       </a>
     </div>
 
@@ -42,7 +42,7 @@
         <div class="passwordBox">
           <label for="box2"></label>
           <input class="box" id="box2" type="password" name="password" placeholder="비밀번호를 입력해주세요" />
-          <img src="/img/btn_visibility_on_24px.png" />
+          <img src="/img/icons/btn_visibility_on_24px.png" />
         </div>
       </div>
 
@@ -51,7 +51,7 @@
         <div class="passwordCheckBox">
           <label for="box3"></label>
           <input class="box" id="box3" type="password" name="password" placeholder="비밀번호를 다시 한 번 입력해주세요" />
-          <img src="/img/btn_visibility_on_24px.png" />
+          <img src="/img/icons/btn_visibility_on_24px.png" />
         </div>
       </div>
 
@@ -63,20 +63,20 @@
           <div class="text">간편 로그인하기</div>
           <div class="logo">
             <a href="https://www.google.com">
-              <img src="/img/./Component 2@2x.png" alt="구글 아이콘 이미지" />
+              <img src="/img/social/google-logo.png" alt="구글 아이콘 이미지" />
             </a>
             <a href="https://www.kakaocorp.com/page">
-              <img src="/img/./Component 3@2x.png" alt="카카오 아이콘 이미지" />
+              <img src="/img/social/kakao-logo.png" alt="카카오 아이콘 이미지" />
             </a>
           </div>
         </div>
       </div>
       <div class="newMember">
-        이미 회원이신가요? <a href="/login">로그인</a>
+        이미 회원이신가요? <a href="/login.html">로그인</a>
       </div>
     </div>
   </div>
-  <script src="/signup/index.js"></script>
+  <script type="module" src="/scripts/signup.js"></script>
 </body>
 
 </html>
