--- a/login.html
+++ b/login.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../reset.css" />
+  <link rel="stylesheet" href="/styles/reset.css" />
   <link rel="stylesheet" type="text/css"
     href='https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles/login.css" />
   <title>판다마켓 로그인</title>
 </head>
 
@@ -15,7 +15,7 @@
   <div class="content">
     <div class="imgbox">
       <a href="../index.html">
-        <img src="/img/panda-market-logo.png" alt="판다마켓 로고" />
+        <img src="/img/logo/panda-market-logo.png" alt="판다마켓 로고" />
       </a>
     </div>
     <div class="contentBox">
@@ -30,7 +30,7 @@
         <h1 class="text">비밀번호</h1>
         <label for="box1"></label>
         <input class="box" id="box1" type="password" name="password" placeholder="비밀번호를 입력해주세요" />
-        <img src="/img/btn_visibility_on_24px.png" />
+        <img src="/img/icons/btn_visibility_on_24px.png" />
       </div>
 
         <button class="loginButton" style = "cursor: pointer">
@@ -42,19 +42,19 @@
           <div class="text">간편 로그인하기</div>
           <div class="logo">
             <a href="https://www.google.com">
-              <img src="/img/./Component 2@2x.png" alt="구글 아이콘 이미지" />
+              <img src="/img/social/google-logo.png" alt="구글 아이콘 이미지" />
             </a>
             <a href="https://www.kakaocorp.com/page">
-              <img src="/img/./Component 3@2x.png" alt="카카오 아이콘 이미지" />
+              <img src="/img/social/kakao-logo.png" alt="카카오 아이콘 이미지" />
             </a>
           </div>
         </div>
       </div>
       <div class="newMember">
-        판다마켓이 처음이신가요? <a href="/signup">회원가입</a>
+        판다마켓이 처음이신가요? <a href="/signup.html">회원가입</a>
       </div>
     </div>
   </div>
-  <script id='script' type=""module" src="/login/index.js"></script>
+  <script id='script' type="module" src="/scripts/login.js"></script>
 </body>
 </html>
