비밀번호 버튼 수정

--- a/pandamarket/login.html
+++ b/pandamarket/login.html
@@ -20,9 +20,12 @@
       <input type="email" id="email" name="email" placeholder="이메일을 입력해주세요"/>
       <div id="emailError"></div>
 
-      <label for="password">비밀번호</label>
-      <input type="password" id="password" name="password" placeholder="비밀번호를 입력해주세요"/ class="eyes">
-      <div id="passwordError"></div>
+      <div class="password-div">
+        <label for="password">비밀번호</label>
+        <input type="password" id="password" name="password" placeholder="비밀번호를 입력해주세요"/>
+        <img class="eyes" src="/pandamarket/img/btn_visibility_off_24px.png"/>
+        <div id="passwordError"></div>
+      </div>
 
       <input class="btn" type="button" id = "loginButton" value="로그인" disabled>
 
@@ -36,7 +39,7 @@
 
       <div class="move_box">
         <div class="move_box_title">판다마켓이 처음이신가요?</div>
-        <a href="/signup.html">회원가입</a>
+        <a href="/pandamarket/signup.html">회원가입</a>
       </div>
     </form>
 
