--- a/signup.html
+++ b/signup.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>판다마켓 - 회원가입</title>
-    <link rel="icon" href="images/logo/favicon.ico" />
+    <link rel="icon" href="/images/logo/favicon.ico" />
     <link
       rel="stylesheet"
       as="style"
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
     />
-  <link rel="stylesheet" href="../styles/global.css" />
-  <link rel="stylesheet" href="../styles/home.css">
-  <link rel="stylesheet" href="../styles/signup.css" />
+  <link rel="stylesheet" href="/styles/global.css" />
+  <link rel="stylesheet" href="/styles/home.css">
+  <link rel="stylesheet" href="/styles/signup.css" />
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -21,21 +21,19 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TFWB8BBP');</script>
     <!-- End Google Tag Manager -->
-  </head>
-  
+  </head>  
   <body>  
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TFWB8BBP"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-  
+    <!-- End Google Tag Manager (noscript) -->  
   <main class="signup-layer">
     <section class="signup-section1-layer">      
-      <a  href="../index.html"
+      <a  href="/index.html"
         target="_self">
         <img 
         id="signup-panda-logo"
-        src="..\images\logo\panda-market-logo.png"
+        src="/images/logo/panda-market-logo.png"
         alt="판다로고"
         />   
       </a>
@@ -81,7 +79,7 @@
               aria-label="비밀번호 보기"
             >
               <img
-                src="../images/login/btn_visibility_on_24px.svg"
+                src="/images/login/btn_visibility_on_24px.svg"
                 alt="비밀번호 숨김 상태 아이콘"
               />
             </button>
@@ -104,7 +102,7 @@
               aria-label="비밀번호 보기"
             >
               <img
-                src="../images/login/btn_visibility_on_24px.svg"
+                src="/images/login/btn_visibility_on_24px.svg"
                 alt="비밀번호 숨김 상태 아이콘"
               />
             </button>  
@@ -128,7 +126,7 @@
           target="_self">
           <img 
           class="signup-item"
-          src="..\images\social\google.svg"
+          src="/images/social/google.svg"
           alt="구글 페이지 연결 버튼"
           />   
         </a>          
@@ -136,7 +134,7 @@
           target="_self">
           <img 
           class="signup-item"
-          src="..\images\social\kakao.svg"
+          src="/images/social/kakao.svg"
           alt="카카오 페이지 연결 버튼"
           />   
         </a>          
@@ -149,11 +147,11 @@
       <div class="signup-section4-link-layer">
         <a 
         class="signup-section4-login"
-        href="login.html">로그인
+        href="/login.html">로그인
       </a>
       </div>      
     </section>
   </main>
-  <script type="text/javascript" src="../javascript/signup.js"></script> 
+  <script type="text/javascript" src="/javascript/signup.js"></script> 
 </body>
 </html>
