--- a/login.html
+++ b/login.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>판다마켓 - 로그인</title>
-    <link rel="icon" href="images/logo/favicon.ico" />
+    <link rel="icon" href="/images/logo/favicon.ico" />
     <link
       rel="stylesheet"
       as="style"
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
     />
-  <link rel="stylesheet" href="../styles/global.css" />
-  <link rel="stylesheet" href="../styles/home.css">  
-  <link rel="stylesheet" href="../styles/auth.css" />
+  <link rel="stylesheet" href="/styles/global.css" />
+  <link rel="stylesheet" href="/styles/home.css">  
+  <link rel="stylesheet" href="/styles/auth.css" />
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -31,11 +31,11 @@
    
   <main class="login-layer">
     <section class="login-section1">
-        <a  href="../index.html"
+        <a  href="/index.html"
             target="_self">
             <img 
             id="login-panda-logo"
-            src="..\images\logo\panda-market-logo.png"
+            src="/images/logo/panda-market-logo.png"
             alt="판다로고"
             />   
         </a>
@@ -71,7 +71,7 @@
               aria-label="비밀번호 보기"
             >
               <img
-                src="../images/login/btn_visibility_on_24px.svg"
+                src="/images/login/btn_visibility_on_24px.svg"
                 alt="비밀번호 숨김 상태 아이콘"
               />
             </button>
@@ -95,7 +95,7 @@
           target="_self">
           <img 
           class="login-item"
-          src="..\images\social\google.svg"
+          src="/images/social/google.svg"
           alt="구글 페이지 연결 버튼"
           />   
         </a>          
@@ -103,7 +103,7 @@
           target="_self">
           <img 
           class="login-item"
-          src="..\images\social\kakao.svg"
+          src="/images/social/kakao.svg"
           alt="카카오 페이지 연결 버튼"
           />   
         </a>          
@@ -116,12 +116,12 @@
       <div class="login-section4-link-layer">
         <a 
         class="login-section4-signup"
-        href="signup.html">회원 가입
+        href="/signup.html">회원 가입
       </a>
       </div>
     </section>
   </main>
   <!-- <script src="../javascript/login.js"></script> -->
-  <script type="text/javascript" src="../javascript/login.js"></script> 
+  <script type="text/javascript" src="/javascript/login.js"></script> 
 </body>
 </html>
