--- a/팬더마켓/index.html
+++ b/팬더마켓/index.html
@@ -19,7 +19,7 @@
     <title>판다마켓</title>
     <link rel="icon" href="images/logo/favicon.ico">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
 <body>
     <header>   
         <img src="images/logo/panda-market-logo.png" alt="logo" class="logo">
