--- a/팬더마켓/signup/signup.html
+++ b/팬더마켓/signup/signup.html
@@ -53,7 +53,7 @@
                 </p>
                 <div class="wrap re">
                     <input type="password" class="check" placeholder="비밀번호를 다시 한 번 입력해주세요"/>
-                    <button type="button" class="password-toggle" aria-label="비밀번호 보기">
+                    <button type="button" class="password-toggle2" aria-label="비밀번호 보기">
                     <img class="eye" src="../images/social/btn_visibility_off.png"/>
                     </button>
                 </div>
