feat: axios CDN script 추가 및 main script 연동

--- a/items.html
+++ b/items.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>아이템</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="api/main.js" type="module" defer></script>
   </head>
   <body>
     <h1>아이템 페이지 입니다.</h1>
