--- a/src/pages/sign-in.html
+++ b/src/pages/sign-in.html
@@ -47,11 +47,9 @@
             <div class="flex flex-col gap-4 mb-gap-2">
               <label for="password">비밀번호</label>
               <div class="grid">
-                <input type="password" minlength="8" autocomplete="current-password" id="password" name="password"
-                  placeholder="비밀번호를 입력해주세요" required />
-                <input type="checkbox" class="absolute self-center justify-self-end pr-6 cursor-pointer appearance-none"
-                  style="background: center no-repeat url('../images//icon/show-off.svg');" checked
-                  id="show-password" />
+                <input class="pr-12" type="password" minlength="8" autocomplete="current-password" id="password"
+                  name="password" placeholder="비밀번호를 입력해주세요" required />
+                <input type="checkbox" name="show-password" />
               </div>
               <p class="form-error-msg"></p>
             </div>
@@ -88,7 +86,8 @@
       </div>
     </dialog>
   </main>
-  <script>
+  <script type="module">
+    import { setVisibleInput } from '/src/utils/formUtils.js'
     const controller = new AbortController();
     const signal = controller.signal;
     const errMsgType = {
@@ -105,21 +104,13 @@
     window.addEventListener('DOMContentLoaded', () => {
       const userEmail = document.getElementById('email');
       const userPassword = document.getElementById('password');
-      const showPassword = document.getElementById('show-password');
+      const showPassword = document.querySelector("input[name='show-password']");
       const submitBtn = document.querySelector('button[type="button"]');
       const dialog = document.querySelector('dialog');
 
-      showPassword.onclick = (e) => {
-        e.target.background = e.target.checked ? 'url("../images/icon/show-off.svg")' : 'url("../images/icon/show-on.svg")';
-
-        if (userPassword.type === 'password') {
-          userPassword.type = 'text';
-          showPassword.style.backgroundImage = 'url("../images/icon/show-on.svg")';
-        } else {
-          userPassword.type = 'password';
-          showPassword.style.backgroundImage = 'url("../images/icon/show-off.svg")';
-        }
-      }
+      showPassword.addEventListener('click', (e) => {
+        setVisibleInput(e);
+      });
 
       submitBtn.onclick = () => {
         const inputs = document.querySelectorAll('input');
