fix: 모달창 반응형 사이즈 수정

--- a/signup.html
+++ b/signup.html
@@ -59,8 +59,8 @@
           </div>
           <div class="input-item pw">
             <label class="text-label">비밀번호 확인</label>
-            <label class="text-label wrong-pw" style="display: none">두 개의 비밀번호가 서로 일치하지 않습니다.</label>
-            <label class="text-label right-pw" style="display: none">✅ 두 개의 비밀번호가 서로 일치합니다.</label>
+            <label class="text-label wrong-pw" style="display: none">❌비밀번호가 일치하지 않습니다</label>
+            <label class="text-label right-pw" style="display: none">✅ 비밀번호가 일치합니다</label>
             <input type="password" class="input-pw" id="pw2" placeholder="비밀번호를 다시 한 번 입력해주세요" autocomplete="off">
             <button type="button" class="show-pw" id="show-pw2" style="display: none" tabindex="-1"></button>
             <button type="button" class="clear-btn" id="clear-btn-pw2" style="display: none" tabindex="-1">X</button>
