--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </script>
   </head>
   <body>
-    <header class="">
+    <header>
       <div class="gnb">
         <a class="logo" href="/">
           <img src="./img/logo.png" alt="로고" />
