스프린트미션3 수정, sprint미션4 제출

--- a/dir/login.html
+++ b/dir/login.html
@@ -36,7 +36,7 @@
                 <div class="main-login-email">
                     이메일
                     <div class="email-contain">
-                        <input type="text" class="input-Email" name="Email" placeholder="이메일을 입력해주세요" maxlength='30'>
+                        <input type="email" class="input-Email" name="Email" autocomplete="off" placeholder="이메일을 입력해주세요" maxlength='30'>
                     </div>
                     <div class="email-err"></div>
                 </div>
