html css js 폴더 생성 후 html과 css 연결

--- a/html/signup.html
+++ b/html/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인</title>
-    <link rel="stylesheet" href="signup.css" />
+    <link rel="stylesheet" href="../css/signup.css" />
 </head>
 <body style="margin-top: 240px;">
     <div>
