html과 img 파일 연결

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div>
-        <img src="img/panda-market-logo.png" alt="판다마켓 로고" width="153px" height="51px"/>
+        <img src="../img/panda-market-logo.png" alt="판다마켓 로고" width="153px" height="51px"/>
       </div>
       <div class="login-btn">
         <a href="login.html" target="_blank" class="btn-font">로그인</a>
@@ -30,7 +30,7 @@
         </div>
         <div>
           <img
-            src="img/hero-image.png"
+            src="../img/hero-image.png"
             alt="판다 하이 이미지"
             width="746px"
             height="340px"
@@ -41,7 +41,7 @@
         
           <div> 
             <img 
-            src="img/feature1-image.png" 
+            src="../img/feature1-image.png" 
             alt="핫 아이템 이미지"
             width="588px"
             height="444px"
@@ -58,7 +58,7 @@
     <main2>
         <section3 class="section3">
           <div>
-            <img src="img/feature2-image.png" 
+            <img src="../img/feature2-image.png" 
             alt="돋보기 그림"
             width="588px"
             height="444px";>
@@ -76,7 +76,7 @@
     <main3>
         <section4 class="section4">
           <div>
-            <img src="img/feature3-image.png"
+            <img src="../img/feature3-image.png"
             art="볼펜그림"
             width="588px"
             height="444px">
@@ -94,7 +94,7 @@
     <main4>
       <section5 class="section5">
         <div>
-          <img src="img/bottom-banner-image.png";
+          <img src="../img/bottom-banner-image.png";
             art="판다마켓 중고 거래 사진";
             width="746px";
             height="397px";>
@@ -119,16 +119,16 @@
 
         <div class="footer-right">
           <a href="https://www.facebook.com/"  target="_blank">
-          <img src="img/facebook-logo.svg" alt="페이스북 로고"></a>
+          <img src="../img/facebook-logo.svg" alt="페이스북 로고"></a>
 
           <a href="https://x.com/"  target="_blank">
-          <img src="img/twitter-logo.svg" alt="트위터 로고"></a>
+          <img src="../img/twitter-logo.svg" alt="트위터 로고"></a>
                
           <a href="https://www.youtube.com/"  target="_blank">
-          <img src="img/youtube-logo.svg" alt="유튜브 로고">
+          <img src="../img/youtube-logo.svg" alt="유튜브 로고">
 
           <a href="https://www.instagram.com/"  target="_blank">
-          <img src="img/instagram-logo.svg" alt="인스타 로고"></div>
+          <img src="../img/instagram-logo.svg" alt="인스타 로고"></div>
           </div>
       </footer>
   
