--- a/html/signup.html
+++ b/html/signup.html
@@ -9,7 +9,7 @@
 <body style="margin-top: 240px;">
     <div>
         <a href="/">
-        <img src="img/panda-market-logo.png" 
+        <img src="../img/panda-market-logo.png" 
         style="width: 396px ; height: 132px"> </a>
     </div>
     <div class="section1">
@@ -48,10 +48,10 @@
         <span class="login-text">간편 로그인 하기</span> 
         <div class="login-icons">
             <a href="https://www.google.com/" target="_blank">
-            <img src="img/googlelogo.png" alt="구글 로고" class="login-icon"> </a> 
+            <img src="../img/googlelogo.png" alt="구글 로고" class="login-icon"> </a> 
 
             <a href="https://www.kakaocorp.com/page/" target="_blank">
-            <img src="img/kakaologo.png" alt="카카오톡 로고" class="login-icon"> </a>  
+            <img src="../img/kakaologo.png" alt="카카오톡 로고" class="login-icon"> </a>  
         </div>
     </div>
 
