--- a/html/login.html
+++ b/html/login.html
@@ -58,6 +58,6 @@
             <a href="signup.html" class="signup-link">회원가입</a>
         </div>
     </section4>
-    <script src="login.js" ></script>
+    <script src="../js/login.js" ></script>
 </body>
 </html>
