--- a/html/signup.html
+++ b/html/signup.html
@@ -61,6 +61,6 @@
             <a href="login.html" class="signup-link">로그인</a>
         </div>
     </section4>
-    <script src="signup.js" ></script>
+    <script src="../js/signup.js" ></script>
 </body>
 </html>
