--- a/react-psh-sprint5/index.html
+++ b/react-psh-sprint5/index.html
@@ -8,7 +8,7 @@
   <title>Vite + React</title>
 
   <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=chevron_left,chevron_right" />
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=chevron_left,chevron_right,favorite" />
 </head>
 
 <body>
