--- a/src/pages/sign-in.html
+++ b/src/pages/sign-in.html
@@ -31,7 +31,7 @@
   <main class="min-h-screen">
     <article class="login-container grid justify-center gap-10 mb-gap-6 py-15 tb-pt-12 mb-pt-6 px-13 mb-px-4">
       <section class="flex justify-center">
-        <a href="/" aria-label="홈으로">
+        <a href="/src/index.html" aria-label="홈으로">
           <img class="flex justify-center mb-w-49.5 mx-auto" src="../images/logo/panda-market-logo.png" alt="판다마켓 로고"
             width="396" height="132">
         </a>
@@ -49,7 +49,7 @@
               <div class="grid">
                 <input class="pr-12" type="password" minlength="8" autocomplete="current-password" id="password"
                   name="password" placeholder="비밀번호를 입력해주세요" required />
-                <input type="checkbox" name="show-password" />
+                <input type="checkbox" name="show-password" aria-label="toggle password visibility" />
               </div>
               <p class="form-error-msg"></p>
             </div>
@@ -62,10 +62,10 @@
           <p class="text-lg gray800 font-medium">간편 로그인하기</p>
           <div class="flex gap-4">
             <a href="https://www.google.com/" aria-label="구글 간편 로그인">
-              <img src="../images/logo/google-login.png" width="42" alt="">
+              <img src="../images/logo/google-login.png" width="42" alt="구글 로그인">
             </a>
             <a href="https://www.kakaocorp.com/page/" aria-label="카카오톡 간편 로그인">
-              <img src="../images/logo/kakao-login.png" width="42" alt="">
+              <img src="../images/logo/kakao-login.png" width="42" alt="카카오톡 로그인">
             </a>
           </div>
         </div>
@@ -121,7 +121,7 @@
       }, { signal: signal });
 
       submitBtn.addEventListener('click', (e) => {
-        inputs.forEach(el => el.reportValidity());
+        inputs.forEach(input => input.reportValidity());
         if (Array.from(inputs).every(el => el.validity.valid)) {
           if (USER_DATA_MAP.has(userEmail.value) && USER_DATA_MAP.get(userEmail.value) === userPassword.value) {
             window.location.href = '/src/pages/items.html';
