Fix error handling for non-existent IDs in API requests

--- a/src/pages/sign-in.html
+++ b/src/pages/sign-in.html
@@ -136,7 +136,7 @@
       }, { signal: signal })
     });
 
-    window.addEventListener('unload', () => {
+    window.addEventListener('beforeunload', () => {
       controller.abort();
     });
   </script>
