--- a/sprint6/public/index.html
+++ b/sprint6/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="../src/img/favicon.ico" />
+  <link rel="icon" href="../src/img/icons/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>중고마켓</title>
 </head>
